--- a/src/Extensions.Logging.Mock/Extensions.Logging.Mock.csproj
+++ b/src/Extensions.Logging.Mock/Extensions.Logging.Mock.csproj
@@ -13,7 +13,7 @@
 		<Copyright>Copyright © 2021 Matthias Gernand. All rights reserved.</Copyright>
 		<Version>1.0.0</Version>
 		<Authors>Matthias Gernand</Authors>
-		<Description>A unit-testing extension for verifing a logger mock.</Description>
+		<Description>A unit-testing extension for verifying a logger mock.</Description>
 		<NeutralLanguage>en</NeutralLanguage>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageProjectUrl>https://github.com/mgernand/Extensions.Logging.Mock</PackageProjectUrl>
