--- a/src/Extensions.Logging.Mock/Extensions.Logging.Mock.csproj
+++ b/src/Extensions.Logging.Mock/Extensions.Logging.Mock.csproj
@@ -11,7 +11,9 @@
 	<PropertyGroup>
 		<IncludeSymbols>false</IncludeSymbols>
 		<Copyright>Copyright © 2021 Matthias Gernand. All rights reserved.</Copyright>
-		<Version>1.0.0</Version>
+		<Version>1.0.1</Version>
+		<AssemblyVersion>1.0.1</AssemblyVersion>
+		<FileVersion>1.0.1</FileVersion>
 		<Authors>Matthias Gernand</Authors>
 		<Description>A unit-testing extension for verifying a logger mock.</Description>
 		<NeutralLanguage>en</NeutralLanguage>
@@ -22,9 +24,14 @@
 		<PackageTags>logging;mock;moq;testing;unit-tests;extensions-logging</PackageTags>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageIcon>icon.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Include="..\..\icon.png">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	  <None Include="..\..\README.md">
 	    <Pack>True</Pack>
 	    <PackagePath>\</PackagePath>
