--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -13,7 +13,7 @@
 	<PropertyGroup>
 		<RootNamespace>Microsoft.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
 		<PackageId>$(AssemblyName)</PackageId>
-		<PackageOutputPath>..\..\package-output</PackageOutputPath>
+		<PackageOutputPath>..\..\package-output\$(Configuration)</PackageOutputPath>
 		<IncludeSymbols>false</IncludeSymbols>
 		<Authors>Matthias Gernand</Authors>
 		<Description>A unit-testing extension for verifying a logger mock.</Description>
@@ -28,7 +28,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<VersionPrefix>1.2.3</VersionPrefix>
+		<VersionPrefix>1.2.4</VersionPrefix>
 		<VersionSuffix></VersionSuffix>
 		<FileVersion>$(VersionPrefix)</FileVersion>
 		<AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
